--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,14 @@
   margin: 15px;
   padding: 10px;
   border: 15px solid blue;
+  border-radius: 23%;
 }
 
 .border .border{
   margin: 15px;
   padding: 10px;
   border: 15px solid rgb(0, 0, 0);
+  border-radius: 15%;
 }
 
 .border .border .border{
